--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
         justify-content: center;
         align-items: center;
         font-family: "Outfit", sans-serif;
-        height: 100vh;
         text-align: center;
+        margin-top: 8%;
     }
 
     .attribution {
@@ -38,10 +38,12 @@
         font-size: 18px;
         color: hsl(218, 44%, 22%);
         padding: 15px 0px;
+        margin: 0;
     }
 
     .qr-text-btm {
         font-weight: 400;
         font-size: 14px;
         color: hsl(220, 15%, 55%);
+        margin: 0%;
     }
